--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -10,6 +10,16 @@ html, body {
     padding: 0;
     height: 100%;
     width: 100%;
+    background-color: beige;
+}
+
+h1 {
+    display: flex;
+    justify-content: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 3em;
+    margin-top: -1px;
+    margin-bottom: -1px;
 }
 
 .looks-good {
@@ -17,10 +27,13 @@ html, body {
     height: 500px;
     margin: 0 auto;
     text-align: center;
+    margin-bottom: 20px;
 }
 .looks-good > img {
     width: 100%;
     height: 100%;
+    border-radius: 50%;
+    border: 3px solid black;
 }
 
 .thumb-container {
@@ -31,13 +44,12 @@ html, body {
 }
 
 .thumb-container > img{
-    display: flex;
-    flex-wrap: wrap;
     height: 150px;
     width: 150px;
     margin-bottom: 20px;
-    text-align: center;
+    border: 3px solid;
 }
+
 /* 
 html {
     box-sizing: border-box;
