--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -13,10 +13,14 @@ html, body {
     background-color: beige;
 }
 
+header {
+    background-color: chocolate;
+}
+
 h1 {
     display: flex;
     justify-content: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
     font-size: 3em;
     margin-top: -1px;
     margin-bottom: -1px;
@@ -28,12 +32,18 @@ h1 {
     margin: 0 auto;
     text-align: center;
     margin-bottom: 20px;
+    z-index: 1;
 }
 .looks-good > img {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    border: 3px solid black;
+    position: absolute;
+    left: 0;
+}
+
+.toggle {
+   display: none;
 }
 
 .thumb-container {
@@ -41,6 +51,7 @@ h1 {
     flex-wrap: wrap;
     justify-content: space-around;
     flex-direction: row;
+    position: absolute;
 }
 
 .thumb-container > img{
@@ -48,6 +59,7 @@ h1 {
     width: 150px;
     margin-bottom: 20px;
     border: 3px solid;
+    
 }
 
 /* 
