--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -62,6 +62,21 @@ h1 {
     
 }
 
+/* .modal {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100;
+    height: 100;
+
+    background-color: (0, 0, 0, 0.5);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
+
 /* 
 html {
     box-sizing: border-box;
