--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -34,12 +34,14 @@ h1 {
     margin-bottom: 20px;
     z-index: 1;
 }
+
 .looks-good > img {
     width: 100%;
     height: 100%;
     border-radius: 50%;
     position: absolute;
     left: 0;
+    top: 0;
 }
 
 .toggle {
@@ -50,8 +52,6 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    flex-direction: row;
-    position: absolute;
 }
 
 .thumb-container > img{
@@ -59,7 +59,6 @@ h1 {
     width: 150px;
     margin-bottom: 20px;
     border: 3px solid;
-    
 }
 
 /* .modal {
